<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_reset_game"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/reset"/>
    <item
        android:id="@+id/menu_create_game"
        android:orderInCategory="120"
        android:showAsAction="never"
        android:title="@string/new_game"/>
    <item
        android:id="@+id/menu_show_play_time"
        android:orderInCategory="140"
        android:showAsAction="never"
        android:title="@string/show_play_time"/>
    <item
        android:id="@+id/menu_reset_game_time"
        android:showAsAction="never"
        android:orderInCategory="145"
        android:title="@string/reset_game_time"/>
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="160"
        android:showAsAction="never"
        android:title="@string/about"/>

</menu>